import "ydb/core/protos/tx_columnshard.proto";
import "ydb/core/tx/columnshard/common/protos/path_id.proto";


package NKikimrColumnShardTxProto;

message TEvent {
    optional uint64 PathId_Deprecated = 1;
    optional string ClassName = 2;
    optional NKikimrColumnShardPathIdProto.TSchemeShardLocalPathId PathId = 3; //TSchemeShardLocalPathId

    message TReadEvent {
        optional string Filter = 1;
        optional string Schema = 2;
    }

    message TWriteEvent {
    }

    oneof Implementation {
        TReadEvent Read = 20;
        TWriteEvent Write = 21;
    }
}
